@@ -1,3 +1,8 @@
+Mon Jul 14 16:18:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	  - The connect button is now greyed out while signing on.
+
 Mon Jul 14 16:08:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvButton.cpp:
